Load Supabase config from env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Supabase Configuration
+# Supabase Configuration (supabase.ts)
+# Required by src/integrations/supabase/client.ts
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
